--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
     <footer class="sideMarginfooter myfooter" >
             <div>
                     <div class="myflex">
-                        <img src="images/logo.svg" alt="our logo" height="16px" width="auto">
-                        <p>Huddle</p>
+                        
+                        <p id="whitelogo">Huddle</p>
                     </div>
 
                     <div class="myflex">
