footer logo added

--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
     <footer class="sideMarginfooter myfooter" >
             <div>
                     <div class="myflex">
-                        
-                        <p id="whitelogo">Huddle</p>
+                        <img src="images/logo.svg" alt="our logo" height="16px" width="auto" id="footlogo">
+                        <!-- <p id="whitelogo">Huddle</p> -->
                     </div>
 
                     <div class="myflex">
