background image added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="assets/boxicons/css/boxicons.min.css" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header id="header">
         <div class="headContainer">
             <div class="nav sideMargin">
                 <img src="images/logo.svg" alt="our logo" height="16px" width="auto">
